--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Title -->
-  <title>User Profile | Front - Admin &amp; Dashboard Template</title>
+  <title>Fahd Mohamed | Profile</title>
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="./favicon.ico">
