Change project title

--- a/project.html
+++ b/project.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Title -->
-  <title>loading ...</title>
+  <title>Project</title>
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="./favicon.ico">
@@ -525,7 +525,7 @@
           this.members      = project.members
           this.images       = project.images;
           this.link         = project.link;
-          $("title").text(`Fahd Mohamed | ${project.title}`);
+          // $("title").text(`Fahd Mohamed | ${project.title}`);
         });
 
       }
