Update project route

--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
                             <td>
                               <h4 class="m-0">
                                 <a x-text="project.title" class="text-black"
-                                  x-bind:href="'/project.html?id=' + (index + 1)"></a>
+                                  x-bind:href="'/fs-profile/project.html?id=' + (index + 1)"></a>
                               </h4>
                             </td>
                             <td>
