--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
 
 
-  <main id="content" role="main" class="main">
+  <main id="content" role="main" class="">
     <!-- Content -->
     <div class="content container-fluid">
       <div class="row justify-content-lg-center">
