update images src

--- a/project.html
+++ b/project.html
@@ -152,7 +152,7 @@
 
   <!-- ========== MAIN CONTENT ========== -->
 
-  <main id="content" role="main" class="main">
+  <main id="content" role="main" class="">
     <!-- Content -->
     <div class="content container-fluid">
       <!-- Page Header -->
