add "fs-profile" to project link

--- a/project.html
+++ b/project.html
@@ -316,7 +316,7 @@
                     <div class="mb-4">
                       <h2 class="mb-1">
                         <a x-text="project.title" class="text-black"
-                          x-bind:href="'/project.html?id=' + (index + 1)"></a>
+                          x-bind:href="'/fs-profile/project.html?id=' + (index + 1)"></a>
                       </h2>
                     </div>
 
