--- a/project.html
+++ b/project.html
@@ -53,6 +53,9 @@
       background: white;
       border-radius: 10px;
     }
+    .footer {
+      position: relative !important;
+    }
   </style>
 
   <script>
@@ -297,7 +300,7 @@
           <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
             <template x-for="(project, index) in projects" :key="index">
 
-              <div class="col mb-3 mb-lg-5" style="height: max-content">
+              <div class="col-sm-12 col-md-6 col-lg-3 mb-3 mb-lg-5" style="height: max-content">
                 <div class="card text-center h-100">
 
                   <!-- Body -->
@@ -525,7 +528,7 @@
           this.members      = project.members
           this.images       = project.images;
           this.link         = project.link;
-          // $("title").text(`Fahd Mohamed | ${project.title}`);
+          $("title").text(`Fs | ${project.title}`);
         });
 
       }
