Fix Collapse issue

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                                 </a>
                             
                                 <div id="navbarVerticalMenuPagesUserProfileMenu" class="nav-collapse collapse show" data-bs-parent="#navbarVerticalMenuPagesMenu">
-                                    <a class="nav-link" ng-class="{ 'active': isActive('/') }" href="#!/">My Profile</a>
+                                    <a class="nav-link" ng-class="{ 'active': isActive('/') }" href="#!/">Profile</a>
                                     <a class="nav-link fs-6" ng-class="{ 'active': isActive('/projects') }" href="#!/projects">Projects</a>
                                     <a class="nav-link fs-6" ng-class="{ 'active': isActive('/courses') }" href="#!/courses">Courses</a>
                                 </div>
@@ -248,15 +248,15 @@
                         <div id="navbarVerticalMenuPagesMenu">
                             <!-- Collapse -->
                             <div class="nav-item">
-                                <a class="nav-link dropdown-toggle active" href="#navbarVerticalMenuPagesFeaturesMenu"
+                                <a class="nav-link dropdown-toggle" href="#navbarVerticalMenuPagesFeaturesMenu"
                                     role="button" data-bs-toggle="collapse"
-                                    data-bs-target="#navbarVerticalMenuPagesFeaturesMenu" aria-expanded="true"
+                                    data-bs-target="#navbarVerticalMenuPagesFeaturesMenu" aria-expanded="false"
                                     aria-controls="navbarVerticalMenuPagesFeaturesMenu">
                                     <i class="bi-braces nav-icon"></i>
                                     <span class="nav-link-title">Features</span>
                                 </a>
 
-                                <div id="navbarVerticalMenuPagesFeaturesMenu" class="nav-collapse collapse show"
+                                <div id="navbarVerticalMenuPagesFeaturesMenu" class="nav-collapse collapse"
                                     data-bs-parent="#navbarVerticalMenuPagesMenu">
                                     <a class="nav-link fs-6" ng-class="{ 'active': isActive('/features/1') }" href="#!/features/1">Core CRM Platform</a>
                                     <a class="nav-link fs-6" ng-class="{ 'active': isActive('/features/2') }" href="#!/features/2">Power Platform / Dataverse</a>
@@ -273,15 +273,15 @@
                         <div id="navbarVerticalMenuPagesMenu">
                             <!-- Collapse -->
                             <div class="nav-item">
-                                <a class="nav-link dropdown-toggle active" href="#navbarVerticalMenuPagesCustomizationMenu"
+                                <a class="nav-link dropdown-toggle" href="#navbarVerticalMenuPagesCustomizationMenu"
                                     role="button" data-bs-toggle="collapse"
-                                    data-bs-target="#navbarVerticalMenuPagesCustomizationMenu" aria-expanded="true"
+                                    data-bs-target="#navbarVerticalMenuPagesCustomizationMenu" aria-expanded="false"
                                     aria-controls="navbarVerticalMenuPagesCustomizationMenu">
                                     <i class="bi-braces nav-icon"></i>
                                     <span class="nav-link-title">Customization</span>
                                 </a>
 
-                                <div id="navbarVerticalMenuPagesCustomizationMenu" class="nav-collapse collapse show"
+                                <div id="navbarVerticalMenuPagesCustomizationMenu" class="nav-collapse collapse"
                                     data-bs-parent="#navbarVerticalMenuPagesMenu">
                                     <a class="nav-link fs-6" ng-class="{ 'active': isActive('/comingsoon') }" href="#!/comingsoon">Xrm.xQuery lib</a>
                                     <a class="nav-link fs-6" ng-class="{ 'active': isActive('/comingsoon') }" href="#!/comingsoon">XCommon lib</a>
