--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
--- Active: 1766004019391@@127.0.0.1@1433
 <!DOCTYPE html>
 <html lang="en" ng-app="myApp">
 
@@ -8,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Title -->
-    <title>User Profile | Front - Admin &amp; Dashboard Template</title>
+    <title>Fs | Fahd Mohamed</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="./favicon.ico">
@@ -210,10 +209,8 @@
                             <div class="nav-item">
                                 <a ng-class="{
                                         'active': isActive('/') || isActive('/projects') || isActive('/courses')
-                                    }"
-                                    class="nav-link dropdown-toggle"
-                                    href="#navbarVerticalMenuPagesUserProfileMenu" role="button"
-                                    data-bs-toggle="collapse"
+                                    }" class="nav-link dropdown-toggle" href="#navbarVerticalMenuPagesUserProfileMenu"
+                                    role="button" data-bs-toggle="collapse"
                                     data-bs-target="#navbarVerticalMenuPagesUserProfileMenu"
                                     ng-attr-aria-expanded="{{ isActive('/') || isActive('/projects') || isActive('/courses') }}"
                                     aria-controls="navbarVerticalMenuPagesUserProfileMenu">
@@ -221,11 +218,9 @@
                                     <span class="nav-link-title">Information</span>
                                 </a>
 
-                                <div id="navbarVerticalMenuPagesUserProfileMenu" class="nav-collapse collapse"
-                                    ng-class="{
+                                <div id="navbarVerticalMenuPagesUserProfileMenu" class="nav-collapse collapse" ng-class="{
                                         'show': isActive('/') || isActive('/projects') || isActive('/courses')
-                                    }"
-                                    data-bs-parent="#navbarVerticalMenuPagesMenu">
+                                    }" data-bs-parent="#navbarVerticalMenuPagesMenu">
                                     <a class="nav-link" ng-class="{ 'active': isActive('/') }" href="#!/">Profile</a>
                                     <a class="nav-link fs-6" ng-class="{ 'active': isActive('/projects') }"
                                         href="#!/projects">Projects</a>
@@ -240,13 +235,11 @@
 
                         <div id="navbarVerticalMenuPagesMenu">
                             <!-- Collapse -->
-                            <div class="nav-item" >
+                            <div class="nav-item">
                                 <a ng-class="{
                                         'active': isActive('/features/1') || isActive('/features/2') || isActive('/features/3') || isActive('/features/4') || isActive('/features/5')
-                                    }"
-                                    class="nav-link dropdown-toggle"
-                                    href="#navbarVerticalMenuPagesFeaturesMenu" role="button"
-                                    data-bs-toggle="collapse"
+                                    }" class="nav-link dropdown-toggle" href="#navbarVerticalMenuPagesFeaturesMenu"
+                                    role="button" data-bs-toggle="collapse"
                                     data-bs-target="#navbarVerticalMenuPagesFeaturesMenu"
                                     ng-attr-aria-expanded="{{ isActive('/features/1') || isActive('/features/2') || isActive('/features/3') || isActive('/features/4') || isActive('/features/5') }}"
                                     aria-controls="navbarVerticalMenuPagesFeaturesMenu">
@@ -254,11 +247,9 @@
                                     <span class="nav-link-title">Features</span>
                                 </a>
 
-                                <div id="navbarVerticalMenuPagesFeaturesMenu" class="nav-collapse collapse"
-                                    ng-class="{
+                                <div id="navbarVerticalMenuPagesFeaturesMenu" class="nav-collapse collapse" ng-class="{
                                         'show': isActive('/features/1') || isActive('/features/2') || isActive('/features/3') || isActive('/features/4') || isActive('/features/5')
-                                    }"
-                                    data-bs-parent="#navbarVerticalMenuPagesMenu">
+                                    }" data-bs-parent="#navbarVerticalMenuPagesMenu">
                                     <a class="nav-link fs-6" ng-class="{ 'active': isActive('/features/1') }"
                                         href="#!/features/1">Core CRM Platform</a>
                                     <a class="nav-link fs-6" ng-class="{ 'active': isActive('/features/2') }"
@@ -281,11 +272,9 @@
                             <div class="nav-item">
                                 <a ng-class="{
                                         'active': isActive('/customizations/xQuery') || isActive('/customizations/xCommon')
-                                    }"
-                                    class="nav-link dropdown-toggle"
-                                    href="#navbarVerticalMenuPagesCustomizationMenu"
-                                    role="button" data-bs-toggle="collapse"
-                                    data-bs-target="#navbarVerticalMenuPagesCustomizationMenu"
+                                    }" class="nav-link dropdown-toggle"
+                                    href="#navbarVerticalMenuPagesCustomizationMenu" role="button"
+                                    data-bs-toggle="collapse" data-bs-target="#navbarVerticalMenuPagesCustomizationMenu"
                                     ng-attr-aria-expanded="{{ isActive('/customizations/xQuery') || isActive('/customizations/xCommon') }}"
                                     aria-controls="navbarVerticalMenuPagesCustomizationMenu">
                                     <i class="bi-braces nav-icon"></i>
@@ -295,11 +284,11 @@
                                 <div id="navbarVerticalMenuPagesCustomizationMenu" class="nav-collapse collapse"
                                     ng-class="{
                                         'show': isActive('/customizations/xQuery') || isActive('/customizations/xCommon')
-                                    }"
-                                    data-bs-parent="#navbarVerticalMenuPagesMenu">
+                                    }" data-bs-parent="#navbarVerticalMenuPagesMenu">
                                     <a class="nav-link fs-6" ng-class="{ 'active': isActive('/customizations/xQuery') }"
                                         href="#!/customizations/xQuery">Xrm.xQuery lib</a>
-                                    <a class="nav-link fs-6" ng-class="{ 'active': isActive('/customizations/xCommon') }"
+                                    <a class="nav-link fs-6"
+                                        ng-class="{ 'active': isActive('/customizations/xCommon') }"
                                         href="#!/customizations/xCommon">XCommon lib</a>
                                 </div>
                             </div>
@@ -377,7 +366,6 @@
                     templateUrl: "components/project/project.html",
                     controller: "ProjectCtrl"
                 })
-
                 .when("/customerservice", {
                     templateUrl: "components/services/customerservice.html",
                     controller: "CustomerServiceCtrl"
@@ -394,8 +382,26 @@
                     templateUrl: "components/customizations/customizations.html",
                     controller: "CustomizationsCtrl"
                 })
-
                 .otherwise({ redirectTo: "/" });
+        });
+
+        app.component('card', {
+            bindings: {
+                count: '<',
+                label: "@",
+                flagTitle: "@"
+            },
+            templateUrl: 'components/widgets/card.html',
+            // controller: function ($http, $attrs) {
+            //     this.$onInit = () => {
+            //         console.log("$attrs :: ", $attrs);
+            //         this.content = {
+            //             Count: $attrs.count,
+            //             Label: $attrs.label ?? "Total Course",
+            //             FlagTitle: $attrs.flagTitle ?? "CRM"
+            //         };
+            //     };
+            // }
         });
 
         app.directive('highlightCode', function ($timeout) {
@@ -409,6 +415,29 @@
             };
         });
 
+        function downloadFileFromUrl() {
+            fetch("./fs-profile/assets/cv/cv.pdf", {
+                method: "GET"
+            })
+                .then(function (response) {
+                    if (!response.ok) {
+                        throw new Error("Download failed");
+                    }
+                    return response.blob();
+                }).then(function (blob) {
+                    var link = document.createElement("a");
+                    var objectUrl = URL.createObjectURL(blob);
+                    link.href = objectUrl;
+                    link.download = "Fahd Mohamed.pdf";
+                    document.body.appendChild(link);
+                    link.click();
+                    document.body.removeChild(link);
+                    URL.revokeObjectURL(objectUrl);
+                })
+                .catch(function (error) {
+                    console.error("File download error : ", error);
+                });
+        }
     </script>
 
     <!-- Components -->
