--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
         });
 
         function downloadFileFromUrl() {
-            fetch("./fs-profile/assets/cv/cv.pdf", {
+            fetch("./assets/cv/cv.pdf", {
                 method: "GET"
             })
                 .then(function (response) {
